--- a/index.html
+++ b/index.html
@@ -13,56 +13,50 @@
 <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
-<!-- 头部 start -->
-<div id="header-home" class="header-home">
-    <div class="header-sign">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 col-sm-2 col-xs-12">
-                    <div class="header-sign-left">
-                        <i class="icon-phone"></i>0745-5671292
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="header-sign-left">
-                        <i class="icon-envelope"></i>vyahui@admin.com
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <div class="header-sign-right text-right">
-                        <ul>
-                            <li><a href="#" class="icon-flag"></a></li>
-                            <li><a href="#" class="icon-umbrella"></a></li>
-                            <li><a href="#" class="icon-trophy"></a></li>
-                            <li><a href="#" class="icon-group"></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!-- vert-nav start -->
+<div class="vert-nav">
+    <ul id="nav" class="list-unstyled">
+        <li><a href="#overview">1.概览</a></li>
+        <li><a href="#html5doc">1.1.HTML5 文档类型</a></li>
+        <li><a href="#image-nifty">image-nifty</a></li>
+        <li><a href="#image-text-default">image-text-default</a></li>
+        <li><a href="#image-text-typical">image-text-typical</a></li>
+        <li><a href="#image-text-implicit">image-text-implicit</a></li>
+        <li><a href="#image-text-list">image-text-list</a></li>
+    </ul>
+</div>
+<!-- vert-nav end -->
+<!-- 巨幕 start-->
+<div class="giant-screen">
+    <div class="container">
+        <h1>subgroups</h1>
+        <p class="big">简要介绍 subgroups，以及如何下载、使用，还有基本模版和案例，等等。</p>
     </div>
-    <div class="header-main nav-fixed">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-6">
-                    <div class="header-logo"></div>
-                </div>
-                <div class="col-md-8 col-sm-8 col-xs-6">
-                    <div class="header-menu text-right">
-                        <ul id="nav">
-                           <li class="current"><a href="#header-home">首页</a></li>
-                           <li><a href="#nav-sign">导航标志</a></li>
-                           <li><a href="#newest-product">最新产品</a></li>
-                           <li><a href="#hots-recommend">热门推荐</a></li>
-                           <li><a href="#aboutus">关于我们</a></li>
-                        </ul>
-                    </div>
-                </div>
+</div>
+<!-- 巨幕 end-->
+
+<div class="blank-50"></div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-10">
+            <!-- 概览 start-->
+            <div id="overview">
+                <h1>1.概览</h1>
+                <p class="big">深入了解 subgroups 底层结构的关键部分，包括我们让 web 开发变得更好、更快、更强壮的最佳实践。</p>
             </div>
+            <!-- 概览 end-->
+
+            <!-- HTML5 文档类型 start-->
+            <div id="html5doc">
+                <h2>1.1.HTML5 文档类型</h2>
+                <p class="big">subgroups 使用到的某些 HTML 元素和 CSS 属性需要将页面设置为 HTML5 文档类型。在你项目中的每个页面都要参照下面的格式进行设置。</p>
+            </div>
+            <!-- HTML5 文档类型 end-->
         </div>
     </div>
 </div>
-<div class="tab-mobile-header blank-56"></div>
+
 <div class="container">
     <p>学习<abbr title="Hyper Text Mark-up Language">HTML</abbr>需要的目的，了解<abbr title="中华人民共和国">中国</abbr></p>
 </div>
