--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                 <p class="big">subgroups 使用到的某些 HTML 元素和 CSS 属性需要将页面设置为 HTML5 文档类型。在你项目中的每个页面都要参照下面的格式进行设置。</p>
             </div>
             <!-- HTML5 文档类型 end-->
+            <div class="lightcode">
+                <pre><code><font class="cc">&lt!</font><font class="ct">DOCTYPE</font> <font class="cc">html&gt</font>
+<font class="cc">&lt</font><font class="ct">html</font> <font class="cs">lang</font><font class="cc">=</font><font class="cv">"zh_CN"</font><font class="cc">&gt</font>
+<font class="cc">  ......</font>
+<font class="cc">&lt/html&gt</font></code></pre>
+            <div id="jscopy-1-1" class="jscopy" onclick="test(this);return false;">复制<div class="prompt-box"><div class="prompt-box-t">复制到剪切板</div><div class="prompt-box-b"></div></div></div>
+            </div>
         </div>
     </div>
 </div>
@@ -61,10 +68,13 @@
     <p>学习<abbr title="Hyper Text Mark-up Language">HTML</abbr>需要的目的，了解<abbr title="中华人民共和国">中国</abbr></p>
 </div>
 <!-- 头部 end -->
+<div class="box1"></div>
+<div class="box2"></div>
 
 
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script src="js/subgroups.main.js"></script>
+<script src="js/subgroups.jscopy.js"></script>
 <script src="js/jquery.nav.js"></script>
 <script>
     $(document).ready(function() {
