增加网页端代码复制功能（未完成）

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <font class="cc">&lt</font><font class="ct">html</font> <font class="cs">lang</font><font class="cc">=</font><font class="cv">"zh_CN"</font><font class="cc">&gt</font>
 <font class="cc">  ......</font>
 <font class="cc">&lt/html&gt</font></code></pre>
-            <div id="jscopy-1-1" class="jscopy" onclick="test(this);return false;">复制<div class="prompt-box"><div class="prompt-box-t">复制到剪切板</div><div class="prompt-box-b"></div></div></div>
+            <div id="jscopy-1-1" class="jscopy">复制<div class="prompt-box"><div class="prompt-box-t">复制到剪切板</div><div class="prompt-box-b"></div></div></div>
             </div>
         </div>
     </div>
