--- a/title.html
+++ b/title.html
@@ -9,6 +9,7 @@
 	<title>title-subgroups</title>
 <link rel="stylesheet" href="css/subgroups.base.css">
 <link rel="stylesheet" href="css/subgroups.main.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
 <div class="container">
@@ -36,6 +37,17 @@
                    电话：0745-125845212</br >
                    传真：0745-254788252</br >
                    邮箱：aorisre@163.com</p>
+            </div>
+            <!-- tit-aorise end -->
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <!-- tit-aorise start -->
+            <div class="title tit-iworm">
+                <div class="header">
+                    <span><i class="icon-th-large"></i></span><div class="header"><h3>关于我们</h3></div>
+                </div>
             </div>
             <!-- tit-aorise end -->
         </div>
