增加一个list，即list-sum

--- a/list.html
+++ b/list.html
@@ -45,6 +45,22 @@
                 </ul>
             </div>
             <!-- list-tag end -->
+
+            <!-- list-tag start -->
+            <div class="list">
+                <ul class="list-num">
+                    <li><span class="squ hot">1</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                    <li><span class="squ hot">2</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                    <li><span class="squ hot">3</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                    <li><span class="squ">4</span><a href="">乐视贾跃亭炮轰苹果封闭：开放的闭环才是未来</a></li>
+                    <li><span class="squ">5</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                    <li><span class="squ">6</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                    <li><span class="squ">7</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                    <li><span class="squ">8</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                    <li><span class="squ">9</span><a href="">侵害消费者权益行为处罚办法</a></li>
+                </ul>
+            </div>
+            <!-- list-tag end -->
         </div>
     </div>
 </div>
