添加jQuery,并开始编写HTML5格式代码

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-10">
+
             <!-- 概览 start-->
             <div id="overview">
                 <h1>1.概览</h1>
@@ -53,13 +54,24 @@
                 <p class="big">subgroups 使用到的某些 HTML 元素和 CSS 属性需要将页面设置为 HTML5 文档类型。在你项目中的每个页面都要参照下面的格式进行设置。</p>
             </div>
             <!-- HTML5 文档类型 end-->
+
             <div class="lightcode">
                 <pre><code><font class="cc">&lt!</font><font class="ct">DOCTYPE</font> <font class="cc">html&gt</font>
-<font class="cc">&lt</font><font class="ct">html</font> <font class="cs">lang</font><font class="cc">=</font><font class="cv">"zh_CN"</font><font class="cc">&gt</font>
-<font class="cc">  ......</font>
-<font class="cc">&lt/html&gt</font></code></pre>
-            <div id="jscopy-1-1" class="jscopy">复制<div class="prompt-box"><div class="prompt-box-t">复制到剪切板</div><div class="prompt-box-b"></div></div></div>
+                    <font class="cc">&lt</font><font class="ct">html</font> <font class="cs">lang</font><font class="cc">=</font><font class="cv">"zh_CN"</font><font class="cc">&gt</font>
+                    <font class="cc">  ......</font>
+                    <font class="cc">&lt/html&gt</font></code>
+                </pre>
+                <div id="jscopy-1-1" class="jscopy"><a href="javascript:;">复制</a><div class="prompt-box"><div class="prompt-box-t">复制到剪切板</div><div class="prompt-box-b"></div></div></div>
             </div>
+
+            <!-- HTML5 文档类型 start -->
+            <article class="light_code">
+                <header><h2>1.1.HTML5 文档类型</h2></header>
+                <p>内容部分</p>
+                <footer>
+                    <p>注释部分</p>
+                </footer>
+            </article>
         </div>
     </div>
 </div>
@@ -72,10 +84,11 @@
 <div class="box2"></div>
 
 
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<!-- <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script> -->
 <script src="js/subgroups.main.js"></script>
-<script src="js/subgroups.jscopy.js"></script>
+<!-- <script src="js/subgroups.jscopy.js"></script> -->
 <script src="js/jquery.nav.js"></script>
+<script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
 <script>
     $(document).ready(function() {
         $('#nav').onePageNav();
